fix: Address shellcheck warnings in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
 
     - name: Get latest commit message
       id: commit_message
-      run: echo "MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
+      run: |
+        COMMIT_MSG=$(git log -1 --pretty=%B)
+        echo "MESSAGE=$COMMIT_MSG" >> $GITHUB_OUTPUT
 
     - name: Determine version increment
       id: version_increment
@@ -192,25 +194,25 @@ jobs:
       if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
       run: ls -R artifacts/
 
-      - name: Create GitHub Release
-        if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: v${{ steps.new_version.outputs.VERSION }}
-          name: Release v${{ steps.new_version.outputs.VERSION }}
-          body: |
-            Automated release for version v${{ steps.new_version.outputs.VERSION }}
-            
-            ${{ github.event.workflow_run.head_commit.message }}
-          draft: false
-          prerelease: false
-          files: |
-            artifacts/wheels/windows/*.whl
-            artifacts/wheels/macos/*.whl
-            artifacts/wheels/linux/*.whl
-            artifacts/bundles/windows/devildex_windows/*
-            artifacts/bundles/macos/devildex_macos/*
-            artifacts/bundles/linux/devildex_linux/*
-            artifacts/docs/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create GitHub Release
+      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: v${{ steps.new_version.outputs.VERSION }}
+        name: Release v${{ steps.new_version.outputs.VERSION }}
+        body: |
+          Automated release for version v${{ steps.new_version.outputs.VERSION }}
+          
+          ${{ github.event.workflow_run.head_commit.message }}
+        draft: false
+        prerelease: false
+        files: |
+          artifacts/wheels/windows/*.whl
+          artifacts/wheels/macos/*.whl
+          artifacts/wheels/linux/*.whl
+          artifacts/bundles/windows/devildex_windows/*
+          artifacts/bundles/macos/devildex_macos/*
+          artifacts/bundles/linux/devildex_linux/*
+          artifacts/docs/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
