fix: Correct commit message source for version increment

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Determine version increment
       id: version_increment
       run: |
-        COMMIT_MESSAGE="${{ github.event.workflow_run.head_commit.message }}"
+        COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
         INCREMENT_TYPE=""
         if [[ "$COMMIT_MESSAGE" == "release(patch):"* ]]; then
           INCREMENT_TYPE="patch"
