--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [project]
+# Create release 0.2.0
 name = "devildex"
 version = "0.2.0"
 description = "A desktop application for discovering, generating, and viewing Python package documentation (docsets). It scans your projects for dependencies, builds their documentation, and provides a unified interface to browse it all locally."
