--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,9 @@ on:
 
 jobs:
   release:
-    needs: build-and-test
+    permissions:
+      contents: write
+      packages: write
     runs-on: ubuntu-latest # Start with ubuntu-latest for initial setup
     steps:
     - name: Checkout code
@@ -58,7 +60,7 @@ jobs:
       id: commit_message
       run: |
         COMMIT_MSG=$(git log -1 --pretty=%B)
-        echo "MESSAGE=$COMMIT_MSG" >> $GITHUB_OUTPUT
+        echo "MESSAGE=\"$COMMIT_MSG\"" >> "$GITHUB_OUTPUT"
 
     - name: Determine version increment
       id: version_increment
@@ -104,7 +106,7 @@ jobs:
         REPO_NAME="${{ github.event.repository.name }}"
         COMMIT_SHA="${{ github.sha }}" # Use github.sha for push-triggered workflow
         WORKFLOW_NAME="Build and Test All Artifacts" # Name of the new workflow
-  BUILD_AND_TEST_WORKFLOW_FILE_NAME=".github/workflows/build-and-test.yml"
+            BUILD_AND_TEST_WORKFLOW_FILE_NAME=".github/workflows/build-and-test.yml"
 
         echo "Searching for '${WORKFLOW_NAME}' workflow run for commit SHA: ${COMMIT_SHA}"
 
@@ -146,9 +148,9 @@ jobs:
       id: new_version
       if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
       run: |
-        poetry version ${{ steps.version_increment.outputs.INCREMENT_TYPE }}
+        poetry version "${{ steps.version_increment.outputs.INCREMENT_TYPE }}"
         NEW_VERSION=$(poetry version --short)
-        echo "VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
+        echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
         echo "New version set to: $NEW_VERSION"
 
 
