--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,12 +35,7 @@ jobs:
       id: commit_message
       run: |
         COMMIT_MSG=$(git log -1 --pretty=%B)
-        { 
-          echo "MESSAGE<<EOF"
-          echo "$COMMIT_MSG"
-          echo "EOF"
-        } >> "$GITHUB_OUTPUT"
-
+                echo "MESSAGE=$(echo "$COMMIT_MSG" | jq -Rs .)" >> "$GITHUB_OUTPUT"
     - name: Determine version increment
       id: version_increment
       env:
