--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,3 +18,5 @@ jobs:
         with:
           release-type: python
           token: ${{ secrets.PAT_TOKEN }} # Use the correct PAT secret name
+          skip-github-pull-request: true # Skip creating pull requests
+          version-file: pyproject.toml # Specify pyproject.toml as the version file
