--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           release-type: python
-          token: ${{ secrets.PAT_TOKEN }} # Use the correct PAT secret name
-          skip-github-pull-request: true # Skip creating pull requests
-          version-file: pyproject.toml # Specify pyproject.toml as the version file
+          token: ${{ secrets.PAT_TOKEN }}
+          skip-github-pull-request: true
+          version-file: pyproject.toml
