--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,7 +8,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  issues: write
+  issues: write # Added issues:write permission
 
 jobs:
   release-please:
@@ -17,5 +17,5 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           release-type: python
-          token: ${{ secrets.PAT_TOKEN }}
-          skip-github-pull-request: true
+          token: ${{ secrets.PAT_TOKEN }} # Use the correct PAT secret name
+          skip-github-pull-request: true # Skip creating pull requests
