Revert "fix(release): remove invalid version-file option from release-please-action"
This reverts commit f396f8bec48f8bec7e96d3616fe680aaf5200c86.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,5 +17,6 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           release-type: python
-          token: ${{ secrets.PAT_TOKEN }} # Use the correct PAT secret name
-          skip-github-pull-request: true # Skip creating pull requests
+          token: ${{ secrets.PAT_TOKEN }}
+          skip-github-pull-request: true
+          version-file: pyproject.toml
