--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,4 +17,4 @@ jobs:
       - uses: googleapis/release-please-action@v4
         with:
           release-type: python
-          token: ${{ secrets.PAT_TOKEN }} # Use the correct PAT secret name
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }} # Use the new PAT secret
