Revert "fix(release): update release-please-action configuration"
This reverts commit e55be77d3dec40ab4aadc5d866fed6d218deca1c.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,10 +8,8 @@ on:
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
     steps:
-      - uses: googleapis/release-please-action@v4
+      - uses: google-github-actions/release-please-action@v4
         with:
           release-type: python
+          package-name: devildex
