Revert "feat(release): implement release-please-action"
This reverts commit 1e641225d00b48619370c8b483e776b70643acdf.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,8 +1,9 @@
 name: Build and Test All Artifacts
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - master
 
 jobs:
   build-linux-wheel:
