--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
       run: |
         REPO_OWNER="${{ github.repository_owner }}"
         REPO_NAME="${{ github.event.repository.name }}"
-        COMMIT_SHA="${{ github.event.workflow_run.head_sha }}" # Use github.event.workflow_run.head_sha for workflow_run triggered workflow
+        COMMIT_SHA="${{ github.sha }}" # Use github.sha for push-triggered workflow
         WORKFLOW_NAME="Build and Test All Artifacts" # Name of the new workflow
             BUILD_AND_TEST_WORKFLOW_FILE_NAME=".github/workflows/build-and-test.yml"
 
