Revert "fix(release): attempt to fix release workflow by using correct commit message"
This reverts commit fb6162d5116822fe975757aac55382b84ca19e76.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Determine version increment
       id: version_increment
       env:
-        HEAD_COMMIT_MESSAGE: ${{ steps.commit_message.outputs.MESSAGE }}
+        HEAD_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
       run: |
         COMMIT_MESSAGE="${{ env.HEAD_COMMIT_MESSAGE }}"
         INCREMENT_TYPE=""
