--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,242 +1,323 @@
 name: Release Workflow
 
 on:
-  workflow_run:
-    workflows: ["Build and Test All Artifacts"]
-    types: [completed]
-    branches: [master]
+  push:
+    tags:
+      - 'v*.*.*' # Trigger on tags like v1.0.0, v0.2.0, etc.
+
+permissions:
+  contents: write # Required to create releases and upload assets
+  pull-requests: write # Good practice to include, though not strictly needed for this simple flow
 
 jobs:
-  release:
-    permissions:
-      contents: write
-      packages: write
-    runs-on: ubuntu-latest # Start with ubuntu-latest for initial setup
+  build-linux-artifacts:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # Necessary to fetch all history for tags
-        token: ${{ secrets.GITHUB_TOKEN }} # Automatically provided GitHub token
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Configure Git
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "actions@github.com"
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
-    - name: Debug pyproject.toml files
-      run: |
-        echo "Listing pyproject.toml files:"
-        find . -name "pyproject.toml*"
-        echo "Content of main pyproject.toml:"
-        cat pyproject.toml
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
 
-    - name: Get latest commit message
-      id: commit_message
-      run: |
-        COMMIT_MSG=$(git log -1 --pretty=%B)
-                DELIMITER=$(uuidgen)
-        echo "MESSAGE<<$DELIMITER" >> "$GITHUB_OUTPUT"
-        echo "$COMMIT_MSG" >> "$GITHUB_OUTPUT"
-        echo "$DELIMITER" >> "$GITHUB_OUTPUT"
-    - name: Determine version increment
-      id: version_increment
-      env:
-        HEAD_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-      run: |
-        COMMIT_MESSAGE="${{ env.HEAD_COMMIT_MESSAGE }}"
-        INCREMENT_TYPE=""
-        if [[ "$COMMIT_MESSAGE" == "release(patch):"* ]]; then
-          INCREMENT_TYPE="patch"
-        elif [[ "$COMMIT_MESSAGE" == "release(minor):"* ]]; then
-          INCREMENT_TYPE="minor"
-        elif [[ "$COMMIT_MESSAGE" == "release(major):"* ]]; then
-          INCREMENT_TYPE="major"
-        fi
-        echo "INCREMENT_TYPE=$INCREMENT_TYPE" >> "$GITHUB_OUTPUT"
-        echo "Found increment type: $INCREMENT_TYPE"
-    - name: Fail if no increment type found
-      if: steps.version_increment.outputs.INCREMENT_TYPE == ''
-      run: |
-        exit 0
+      - name: Install system dependencies for wxPython
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libxtst-dev libnotify-dev \
+          python3-gi \
+          python3-gi-cairo \
+          python3-wxgtk4.0 \
+          python3-wxgtk-webview4.0
 
-    - name: Set up Python 3.13
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.13'
+      - name: Install dependencies with pip
+        env:
+          PIP_FIND_LINKS: "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/"
+        run: |
+          poetry lock
+          poetry export -f requirements.txt --output requirements.txt --without-hashes
+          pip install -r requirements.txt
 
-    - name: Install jq
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Build Linux Wheel
+        run: poetry build --format wheel
 
-    - name: Install Poetry
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: pip install poetry
+      - name: Build Linux PyInstaller bundle
+        run: |
+          poetry run pyinstaller pyinstaller_specs/devildex_linux.spec --distpath dist/linux
+          cd dist/linux
+          zip -r devildex-linux-bundle-${{ github.ref_name }}.zip devildex
+          mv devildex-linux-bundle-${{ github.ref_name }}.zip ..
+          cd ../..
 
-    - name: Get Build and Test Workflow Run ID
-      id: get_build_and_test_run_id
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: |
-        REPO_OWNER="${{ github.repository_owner }}"
-        REPO_NAME="${{ github.event.repository.name }}"
-        COMMIT_SHA="${{ github.sha }}" # Use github.sha for push-triggered workflow
-        WORKFLOW_NAME="Build and Test All Artifacts" # Name of the new workflow
-            BUILD_AND_TEST_WORKFLOW_FILE_NAME=".github/workflows/build-and-test.yml"
+      - name: Upload Linux Wheel artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-linux-wheel
+          path: dist/*.whl
 
-        echo "Searching for '${WORKFLOW_NAME}' workflow run for commit SHA: ${COMMIT_SHA}"
+      - name: Upload Linux Bundle artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-linux-bundle
+          path: dist/devildex-linux-bundle-${{ github.ref_name }}.zip
 
-        # Get workflow ID by name
-        WORKFLOW_ID_RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                                    -H "Accept: application/vnd.github.v3+json" \
-                                    "https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/actions/workflows")
-        WORKFLOW_ID=$(echo "${WORKFLOW_ID_RESPONSE}" | jq -r ".workflows[] | select(.path == \"${BUILD_AND_TEST_WORKFLOW_FILE_NAME}\") | .id")
+  build-macos-artifacts:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        if [ "${WORKFLOW_ID}" == "null" ]; then
-          echo "Error: Workflow '${WORKFLOW_NAME}' not found."
-          exit 1
-        fi
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
-        RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                        -H "Accept: application/vnd.github.v3+json" \
-                        "https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/actions/runs?workflow_id=${WORKFLOW_ID}&head_sha=${COMMIT_SHA}&status=success&per_page=1")
+      - name: Install Poetry
+        run: pip install poetry
 
-        RUN_ID=$(echo "${RESPONSE}" | jq -r '.workflow_runs[0].id')
+      - name: Build macOS Wheel
+        run: poetry build --format wheel
 
-        if [ "${RUN_ID}" != "null" ]; then
-          echo "Found '${WORKFLOW_NAME}' workflow run ID: ${RUN_ID}"
-          echo "run_id=${RUN_ID}" >> "$GITHUB_OUTPUT"
-        else
-          echo "No successful '${WORKFLOW_NAME}' workflow run found for commit SHA: ${COMMIT_SHA}"
-          echo "run_id=" >> "$GITHUB_OUTPUT"
-          exit 1
-        fi
+      - name: Build macOS PyInstaller bundle
+        run: |
+          poetry run pyinstaller pyinstaller_specs/devildex_macos.spec --distpath dist/macos
+          cd dist/macos
+          zip -r devildex-macos-bundle-${{ github.ref_name }}.zip devildex
+          mv devildex-macos-bundle-${{ github.ref_name }}.zip ..
+          cd ../..
 
-    - name: Debug Poetry Version
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: |
-        echo "Current Poetry version: $(poetry version --short)"
-        echo "Increment type: ${{ steps.version_increment.outputs.INCREMENT_TYPE }}"
+      - name: Upload macOS Wheel artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-macos-wheel
+          path: dist/*.whl
 
+      - name: Upload macOS Bundle artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-macos-bundle
+          path: dist/devildex-macos-bundle-${{ github.ref_name }}.zip
 
+  build-windows-artifacts:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Bump version with Poetry
-      id: new_version
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: |
-        poetry version "${{ steps.version_increment.outputs.INCREMENT_TYPE }}"
-        NEW_VERSION=$(poetry version --short)
-        echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
-        echo "New version set to: $NEW_VERSION"
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
-    - name: Create GitHub Release
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: v${{ steps.new_version.outputs.VERSION }}
-        name: Release v${{ steps.new_version.outputs.VERSION }}
-        body: ${{ steps.commit_message.outputs.MESSAGE }}
-        draft: false
-        prerelease: false
-        files: |
-          artifacts/wheels/*.whl
-          artifacts/bundles/*.zip
-          artifacts/docs/*.zip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install Poetry
+        run: pip install poetry
 
+      - name: Build Windows Wheel
+        run: poetry build --format wheel
 
+      - name: Build Windows PyInstaller bundle
+        run: |
+          poetry run pyinstaller pyinstaller_specs/devildex_windows.spec --distpath dist/windows
+          cd dist/windows
+          zip -r devildex-windows-bundle-${{ github.ref_name }}.zip devildex.exe
+          mv devildex-windows-bundle-${{ github.ref_name }}.zip ..
+          cd ../..
 
-    - name: Create artifacts directory
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: mkdir -p artifacts/wheels artifacts/bundles artifacts/docs
+      - name: Upload Windows Wheel artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-windows-wheel
+          path: dist/*.whl
 
+      - name: Upload Windows Bundle artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-windows-bundle
+          path: dist/devildex-windows-bundle-${{ github.ref_name }}.zip
 
+  build-documentation:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
 
+      - name: Install system dependencies for wxPython
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libxtst-dev libnotify-dev \
+          python3-gi \
+          python3-gi-cairo \
+          python3-wxgtk4.0 \
+          python3-wxgtk-webview4.0
 
+      - name: Install dependencies with pip
+        env:
+          PIP_FIND_LINKS: "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/"
+        run: |
+          poetry lock
+          poetry export -f requirements.txt --output requirements.txt --without-hashes
+          pip install -r requirements.txt
 
+      - name: Build Documentation
+        run: |
+          chmod +x generate_sphinx_doc.sh
+          ./generate_sphinx_doc.sh
 
-    - name: Add github remote
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: |
-        git remote add github https://github.com/${{ github.repository }}
+      - name: Zip documentation
+        run: |
+          cd build/html
+          zip -r devildex_documentation.zip ./*
+          mv devildex_documentation.zip ../../dist/
+          cd ../..
 
+      - name: Upload Documentation artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-documentation
+          path: ./dist/devildex_documentation.zip
 
+  create-and-upload-release:
+    runs-on: ubuntu-latest
+    needs: [build-linux-artifacts, build-macos-artifacts, build-windows-artifacts, build-documentation]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Download Linux Wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-linux-wheel
+          path: dist/linux-wheel
 
+      - name: Download Linux Bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-linux-bundle
+          path: dist/linux-bundle
 
+      - name: Download macOS Wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-macos-wheel
+          path: dist/macos-wheel
 
+      - name: Download macOS Bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-macos-bundle
+          path: dist/macos-bundle
 
+      - name: Download Windows Wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-windows-wheel
+          path: dist/windows-wheel
 
-    - name: Download Windows Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Download Windows Bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-windows-bundle
+          path: dist/windows-bundle
 
-    - name: Download macOS Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        name: devildex-macos-wheel
-        path: artifacts/wheels/macos
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Download Documentation
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-documentation
+          path: dist/documentation
 
-    - name: Download Linux Wheel artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: "Release ${{ github.ref }}"
+          draft: false
+          prerelease: false
 
-    - name: Download Windows PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        name: devildex-windows-latest-build
-        path: artifacts/bundles/windows
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Upload Linux Wheel asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/linux-wheel/*.whl
+          asset_name: devildex-linux-wheel-${{ github.ref_name }}.whl
+          asset_content_type: application/zip
 
-    - name: Download macOS PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Upload Linux Bundle asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/linux-bundle/*.zip
+          asset_name: devildex-linux-bundle-${{ github.ref_name }}.zip
+          asset_content_type: application/zip
 
-    - name: Download Linux PyInstaller bundle
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        name: devildex-ubuntu-latest-build
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Upload macOS Wheel asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/macos-wheel/*.whl
+          asset_name: devildex-macos-wheel-${{ github.ref_name }}.whl
+          asset_content_type: application/zip
 
-    - name: Download documentation artifact
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      uses: actions/download-artifact@v4
-      with:
-        name: documentation-html
-        path: artifacts/docs
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        run-id: ${{ steps.get_build_and_test_run_id.outputs.run_id }}
-        repository: ${{ github.repository }}
+      - name: Upload macOS Bundle asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/macos-bundle/*.zip
+          asset_name: devildex-macos-bundle-${{ github.ref_name }}.zip
+          asset_content_type: application/zip
 
-    - name: Zip documentation
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: |
-        cd artifacts/docs
-        zip -r devildex_documentation.zip ./*
-        mv devildex_documentation.zip ../
-        cd ../..
+      - name: Upload Windows Wheel asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/windows-wheel/*.whl
+          asset_name: devildex-windows-wheel-${{ github.ref_name }}.whl
+          asset_content_type: application/zip
 
-    - name: List Artifacts Directory (after download)
-      if: ${{ steps.version_increment.outputs.INCREMENT_TYPE != '' }}
-      run: ls -R artifacts/
+      - name: Upload Windows Bundle asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/windows-bundle/*.zip
+          asset_name: devildex-windows-bundle-${{ github.ref_name }}.zip
+          asset_content_type: application/zip
+
+      - name: Upload Documentation asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/documentation/*.zip
+          asset_name: devildex-documentation-${{ github.ref_name }}.zip
+          asset_content_type: application/zip
